--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,6 @@
     "name": "jean85/symfony-openapi-example",
     "description": "An example of using an OpenAPI spec in a Symfony application",
     "type": "project",
-    "require": {
-        "php": "^7.4",
-        "symfony/flex": "^1.12",
-        "symfony/framework-bundle": "^5.2"
-    },
-    "require-dev": {
-        "phpstan/phpstan": "^0.12.81",
-        "vimeo/psalm": "^4.6",
-        "phpunit/phpunit": "^9.5",
-        "facile-it/facile-coding-standard": "^0.4.1"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -20,6 +9,31 @@
             "email": "alessandro.lai85@gmail.com"
         }
     ],
+    "require": {
+        "php": "^7.4",
+        "symfony/flex": "^1.12",
+        "symfony/framework-bundle": "^5.2",
+        "symfony/dotenv": "^5.2",
+        "symfony/yaml": "^5.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.81",
+        "vimeo/psalm": "^4.6",
+        "phpunit/phpunit": "^9.5",
+        "facile-it/facile-coding-standard": "^0.4.1",
+        "facile-it/symfony-functional-testcase": "^1.1",
+        "symfony/browser-kit": "^5.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src" 
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        }
+    },
     "minimum-stability": "stable",
     "scripts": {
         "cs-check": "php-cs-fixer fix --dry-run --diff",
