--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    League\OpenAPIValidation\PSR7\RequestValidator:
+        factory: ['@League\OpenAPIValidation\PSR7\ValidatorBuilder', 'getRequestValidator']
+
+    League\OpenAPIValidation\PSR7\ValidatorBuilder:
+        calls:
+            - [ 'setCache', ['@cache.openapivalidator']]
+            - [ 'fromYamlFile', ['%kernel.project_dir%/reference/openapi.v1.yaml']]
