--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
     ],
     "require": {
         "php": "^7.4",
+        "crell/api-problem": "^3.5",
         "league/openapi-psr7-validator": "^0.15.2",
         "nyholm/psr7": "^1.4",
         "symfony/dotenv": "^5.2",
         "symfony/flex": "^1.12",
         "symfony/framework-bundle": "^5.2",
         "symfony/psr-http-message-bridge": "^2.1",
-        "symfony/yaml": "^5.2"
+        "symfony/yaml": "^5.2",
+        "webmozart/assert": "^1.10"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.81",
