--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/monolog-bundle": "^3.6",
         "symfony/psr-http-message-bridge": "^2.1",
         "symfony/yaml": "^5.2",
+        "thecodingmachine/safe": "^1.3",
         "webmozart/assert": "^1.10"
     },
     "require-dev": {
@@ -30,6 +31,7 @@
         "phpstan/phpstan-phpunit": "^0.12.18",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.2",
+        "thecodingmachine/phpstan-safe-rule": "^1.0",
         "vimeo/psalm": "^4.6"
     },
     "autoload": {
